update metadata SEO

--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,17 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Bruno | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="Personal portfolio build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <meta itemprop="name" content="Portfolio | Bruno Silva">
+  <meta itemprop="description" content="Personal portfolio build with React.js">
 
   <!-- Facebook Meta Tags -->
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
+  <meta property="og:title" content="Portfolio | Bruno Silva">
+  <meta property="og:description" content="Personal portfolio build with React.js">
 </head>
 
 <body>
